# beamFoam

./: .gitignore  AllcleanTutorials  Allwclean  Allwmake  BEAM_ATTACHMENT_KINEMATICS_OWNERSHIP.md  BLOCK_EIGEN_RIGID_BODY_COUPLING_PROGRESS.md  README.md  bashrc
.github/workflows/: build.yml
applications/scripts/: Allwmake  beamFoamCleanScripts.sh
applications/utilities/vtk2vtp/: CMakeLists.txt  CMakeLists_2.txt  CMakeLists_old.txt  compile  vtk2vtp.cxx
tutorials/: plot_rigidBodyAndBeam_new_vs_old.py
tutorials/3DdynamicCantilever/: Allclean  Allrun  README.md  allPlots.gnuplot  dispPlotDT.gnuplot  runSweep.sh  runTimeSweep.sh
tutorials/3DdynamicCantileverMultiBeamDensity/: Allrun  README.md
tutorials/3dDynamicCantilever/: Allclean  Allrun  README.md  allPlots.gnuplot  dispPlotMesh.gnuplot  runSweep.sh  runTimeSweep.sh
tutorials/beamAndSpringInSeries/: Allrun
tutorials/cantilever/: README.md
tutorials/cantileverDrag/: Allclean  allPlots.gnuplot
tutorials/cantileverFollowerForce/: Allclean  Allrun  README.md  allPlots.gnuplot  dispPlot.gnuplot  runSweep.sh
tutorials/cantileverSpring/: Allrun  README.md
tutorials/freeFlexibleBeam/: Allclean  Allrun  README.md  allPlots.gnuplot
tutorials/largeDeflectionCantilever/: Allclean  Allrun  README.md  allPlots.gnuplot
tutorials/rigidBodyAndBeam/: Allclean  Allrun  Alltest  check_block_eigen_authoritative_regression.py
tutorials/rigidBodyAndBeam_compareSixDoF_Eigen/: .gitignore  plot_rigid_body_displacement_comparison.py
tutorials/rigidBodyAndBeam_coupledSolver/: log.blockMesh  log.interFoam  (+1 more)
(+2322 files in other folders)
